--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,8 +65,10 @@ dependencies {
     // Tests
     testImplementation 'junit:junit:4.12'
     testImplementation "io.mockk:mockk:1.9.3"
-    testImplementation 'org.koin:koin-test:1.0.1'
+    testImplementation 'org.koin:koin-test:2.0.1'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'org.robolectric:robolectric:4.3'
 
     // Instrumented Tests
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
