--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,6 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -84,6 +83,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 
     //Dependency Injection
     implementation 'org.koin:koin-android:2.0.1'
@@ -91,13 +91,18 @@ dependencies {
     implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
 
     //Room
-    implementation "androidx.room:room-runtime:2.2.4"
-    implementation "androidx.room:room-ktx:2.2.4"
-    kapt "androidx.room:room-compiler:2.2.4"
+    implementation "androidx.room:room-runtime:2.2.5"
+    implementation "androidx.room:room-ktx:2.2.5"
+    implementation 'android.arch.persistence.room:rxjava2:2.2.5'
+    kapt "androidx.room:room-compiler:2.2.5"
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
 
     //Animations
     implementation 'com.airbnb.android:lottie:3.2.2'
+
+    // ReactiveX
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
 }
