--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:roundIcon="@mipmap/ic_the_movies_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".ui.detail.DetailMovieActivity" />
-        <activity android:name=".ui.main.MainActivity" />
+        <activity android:name=".ui.detail.activity.DetailMovieActivity" />
+        <activity android:name=".ui.main.activity.MainActivity" />
         <activity android:name=".ui.splash.SplashScreenActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
