--- a/gradle.properties
+++ b/gradle.properties
@@ -21,14 +21,10 @@ android.enableJetifier=true
 kotlin.code.style=official
 kapt.incremental.apt=true
 
-# For production version
+# Urls used to make service calls
+urlDev="https://api.themoviedb.org/3/"
 urlPrd="https://api.themoviedb.org/3/"
 
-# For development version
-urlDev="https://api.themoviedb.org/3/"
-
-# For image download in production
-urlDownloadPrd="https://image.tmdb.org/t/p/"
-
-# For image download in development
+# URLs for downloading movie images
 urlDownloadDev="https://image.tmdb.org/t/p/"
+urlDownloadPrd="https://image.tmdb.org/t/p/"
