--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_the_movies_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        tools:targetApi="n">
+
         <activity android:name=".ui.detail.activity.DetailMovieActivity" />
         <activity android:name=".ui.main.activity.MainActivity" />
         <activity android:name=".ui.splash.SplashScreenActivity" >
