--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     testImplementation 'org.koin:koin-test:2.0.1'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "androidx.room:room-testing:2.2.5"
 
     //Instrumented Tests
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -99,9 +100,9 @@ dependencies {
 
     //Room
     implementation "androidx.room:room-runtime:2.2.5"
-    implementation "androidx.room:room-ktx:2.2.5"
-    implementation 'android.arch.persistence.room:rxjava2:2.2.5'
     kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-ktx:2.2.5"
+    implementation "androidx.room:room-rxjava2:2.2.5"
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
@@ -111,5 +112,5 @@ dependencies {
 
     // ReactiveX
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
 }
