Best SOLID application, and start implementating UI Tests
- Change to pick up language directly from the Android system
- Implementation of instrumented tests begins
- Correction of RXRoom dependencies, now being able to normally use the Single return
- Correction of RXRoom dependencies, now being able to normally use the Single return
- Conversion of enum classes to sealed classes
- Removal of unused error return interface
- Changing the variable that stores the RecyclerView position by implementing onSavedInstanceState () saving the state of the RecyclerView and retrieving it later
- Implementation of a contract between Activity and Fragments to transmit research between them
- Implementation of unit tests in the Repositories

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
         android:theme="@style/AppTheme"
         tools:targetApi="n">
 
-        <activity android:name=".ui.detail.activity.DetailMovieActivity" />
-        <activity android:name=".ui.main.activity.MainActivity" />
+        <activity android:name=".ui.detail.DetailMovieActivity" />
+        <activity android:name=".ui.main.MainActivity" />
         <activity android:name=".ui.splash.SplashScreenActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
