--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,6 @@ android {
             buildConfigField "String", "THE_MOVIES_URL", urlPrd
             buildConfigField "String", "DOWNLOAD_IMAGE_URL", urlDownloadPrd
             buildConfigField "String", "API_KEY", localProperties['apiKey']
-            buildConfigField "String", "API_LANGUAGE", localProperties["apiLanguage"]
         }
 
         debug {
@@ -36,7 +35,6 @@ android {
             buildConfigField "String", "THE_MOVIES_URL", urlDev
             buildConfigField "String", "DOWNLOAD_IMAGE_URL", urlDownloadDev
             buildConfigField "String", "API_KEY", localProperties['apiKey']
-            buildConfigField "String", "API_LANGUAGE", localProperties["apiLanguage"]
         }
     }
 
@@ -78,8 +76,10 @@ dependencies {
 
     //Instrumented Tests
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation "io.mockk:mockk-android:1.9.3"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
 
     //ViewModel Arch
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -113,4 +113,5 @@ dependencies {
     // ReactiveX
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0-beta01'
 }
